infra/k8s-dev/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules: # All routing rules
    - host: ecom.dev
      http:
        paths:
          - path: /api/products/?(.*)
            backend:
              serviceName: product-service
              servicePort: 3000
